<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BugsGame</string>

    <string name="register_title">Регистрация</string>
    <string name="register_hint_full_name">ФИО</string>
    <string name="register_hint_gender">Пол</string>
    <string name="register_gender_male">Мужской</string>
    <string name="register_gender_female">Женский</string>
    <string name="register_hint_course">Курс</string>
    <string name="register_course_first">1 курс</string>
    <string name="register_course_second">2 курс</string>
    <string name="register_course_third">3 курс</string>
    <string name="register_course_fourth">4 курс</string>
    <string name="register_difficulty_value">Сложность: %1$d</string>
    <string name="register_text_birth_date">Дата рождения</string>
    <string name="register_text_zodiac">Знак зодиака</string>
    <string name="register_button_submit">Продолжить</string>
    <string name="register_error_full_name">Введите ФИО</string>
    <string name="register_error_gender">Выберите пол</string>
    <string name="register_error_course">Выберите курс</string>
    <string name="register_error_birth_date">Выберите дату рождения</string>
    <string name="register_error_zodiac_load">Не удалось загрузить знаки зодиака</string>
    <string name="register_error_name_exists">Пользователь с таким именем уже зарегистрирован</string>
    <string name="register_button_choose_user">Выбрать существующего пользователя</string>
    <string name="register_empty_zodiac">Знаки зодиака не найдены</string>

    <string name="home_title">Главная</string>
    <string name="home_title_player">Игрок</string>
    <string name="home_text_full_name">ФИО: %1$s</string>
    <string name="home_text_gender">Пол: %1$s</string>
    <string name="home_text_course">Курс: %1$s</string>
    <string name="home_text_difficulty">Сложность: %1$d</string>
    <string name="home_text_birth_date">Дата рождения: %1$s</string>
    <string name="home_title_zodiac">Ваш знак зодиака</string>
    <string name="home_cd_zodiac">Знак зодиака %1$s</string>
    <string name="home_difficulty_value">Сложность %1$s</string>
    <string name="home_cd_gender_male">Мужской пол</string>
    <string name="home_cd_gender_female">Женский пол</string>
    <string name="home_cd_best_score">Лучший счёт: %1$d</string>
    <string name="home_empty_user">Пользователь не выбран</string>

    <string name="zodiac_aries_name">Овен</string>
    <string name="zodiac_taurus_name">Телец</string>
    <string name="zodiac_gemini_name">Близнецы</string>
    <string name="zodiac_cancer_name">Рак</string>
    <string name="zodiac_leo_name">Лев</string>
    <string name="zodiac_virgo_name">Дева</string>
    <string name="zodiac_libra_name">Весы</string>
    <string name="zodiac_scorpio_name">Скорпион</string>
    <string name="zodiac_sagittarius_name">Стрелец</string>
    <string name="zodiac_capricorn_name">Козерог</string>
    <string name="zodiac_aquarius_name">Водолей</string>
    <string name="zodiac_pisces_name">Рыбы</string>
    <string name="zodiac_aries_cd">Иконка знака зодиака Овен</string>
    <string name="zodiac_taurus_cd">Иконка знака зодиака Телец</string>
    <string name="zodiac_gemini_cd">Иконка знака зодиака Близнецы</string>
    <string name="zodiac_cancer_cd">Иконка знака зодиака Рак</string>
    <string name="zodiac_leo_cd">Иконка знака зодиака Лев</string>
    <string name="zodiac_virgo_cd">Иконка знака зодиака Дева</string>
    <string name="zodiac_libra_cd">Иконка знака зодиака Весы</string>
    <string name="zodiac_scorpio_cd">Иконка знака зодиака Скорпион</string>
    <string name="zodiac_sagittarius_cd">Иконка знака зодиака Стрелец</string>
    <string name="zodiac_capricorn_cd">Иконка знака зодиака Козерог</string>
    <string name="zodiac_aquarius_cd">Иконка знака зодиака Водолей</string>
    <string name="zodiac_pisces_cd">Иконка знака зодиака Рыбы</string>
    <string name="zodiac_unknown_name">Знак зодиака не определён</string>
    <string name="zodiac_unknown_cd">Знак зодиака не определён</string>

    <string name="rules_title">Правила</string>
    <string name="rules_html_content"><![CDATA[
        <h2>Игра «Жуки»</h2>
        <p>На игровом поле появляются насекомые. Ваша задача - как можно быстрее уничтожать их нажатием на изображение.</p>
        <p><b>Попадание</b> приносит очки, а <b>промах</b> увеличивает количество штрафов.</p>
        <p>Следите за оставшимся временем и старайтесь набрать максимальное количество очков за раунд.</p>
    ]]></string>

    <string name="authors_title">Авторы</string>
    <string name="records_title">Рекорды</string>
    <string name="records_empty">Пока нет сохранённых рекордов</string>
    <string name="records_error">Не удалось загрузить рекорды</string>
    <string name="authors_name">Архипов Константин</string>
    <string name="authors_name_bugs_game_team">Команда BugsGame</string>
    <string name="authors_cd_author_photo">Фотография автора</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_speed_title">Скорость игры</string>
    <string name="settings_max_cockroaches_title">Максимум тараканов</string>
    <string name="settings_bonus_interval_title">Интервал появления бонусов, с</string>
    <string name="settings_round_duration_title">Длительность раунда, с</string>
    <string name="settings_cd_speed_picker">Скорость игры</string>
    <string name="settings_cd_max_cockroaches_picker">Максимальное количество тараканов на экране</string>
    <string name="settings_cd_bonus_interval_picker">Интервал появления бонусов в секундах</string>
    <string name="settings_cd_round_duration_picker">Длительность раунда в секундах</string>

    <string name="toolbar_settings">Настройки</string>
    <string name="toolbar_new_user">Зарегистрировать нового пользователя</string>
    <string name="toolbar_back">Назад</string>
    <string name="menu_home">Главная</string>
    <string name="menu_game">Игра</string>
    <string name="menu_rules">Правила</string>
    <string name="menu_authors">Авторы</string>
    <string name="menu_records">Рекорды</string>

    <string name="game_title">Игра</string>
    <string name="game_score_value">%1$d</string>
    <string name="game_penalty_value">%1$d</string>
    <string name="game_timer_value">%1$d:%2$02d</string>
    <string name="game_timer_cd_icon">Оставшееся время</string>
    <string name="game_score_cd_icon">Очки</string>
    <string name="game_penalty_cd_icon">Штрафы</string>
    <string name="game_score_cd">Очки: %1$d</string>
    <string name="game_penalty_cd">Штрафы: %1$d</string>
    <string name="game_timer_cd">Оставшееся время: %1$d:%2$02d</string>
    <string name="game_cd_board">Игровое поле. Нажимайте на движущихся жуков.</string>
    <string name="game_cd_enter_fullscreen">Открыть игру в полноэкранном режиме</string>
    <string name="game_cd_exit_fullscreen">Выйти из полноэкранного режима</string>
    <string name="game_toolbar_restart">Перезапустить игру</string>
    <string name="game_start_title">Готовы начать игру?</string>
    <string name="game_start_button">Старт</string>
    <string name="game_rules_button">Правила</string>
    <string name="game_restart_title">Перезапустить игру?</string>
    <string name="game_restart_message">Текущий раунд будет приостановлен.</string>
    <string name="game_yes">Да</string>
    <string name="game_no">Нет</string>
    <string name="game_result_title">Раунд завершён</string>
    <string name="game_result_message">Очки: %1$d\nШтрафы: %2$d\nИтоговый счёт: %3$d\nДлительность: %4$d с</string>
    <string name="game_result_restart">Перезапустить раунд</string>
    <string name="game_result_home">На главную</string>

    <string name="settings_change_user">Сменить пользователя</string>

    <string name="user_switch_title">Смена пользователя</string>
    <string name="user_switch_message">Зарегистрировать нового пользователя или выбрать уже созданного ранее?</string>
    <string name="user_register_new">Зарегистрировать нового</string>
    <string name="user_select_existing">Выбрать существующего</string>
    <string name="user_select_title">Выбор пользователя</string>
    <string name="user_select_empty">Сохранённых пользователей пока нет</string>
    <string name="user_cancel">Отмена</string>
    <string name="home_text_difficulty_stars_one">⭐</string>
    <string name="home_text_difficulty_stars_two">⭐⭐</string>
    <string name="home_text_difficulty_stars_three">⭐⭐⭐</string>

</resources>
