<?xml version="1.0" encoding="utf-8"?>
<zodiacSigns>
    <sign
        name="@string/zodiac_aries_name"
        contentDescription="@string/zodiac_aries_cd"
        icon="@drawable/ic_zodiac_aries"
        monthStart="3"
        dayStart="21"
        monthEnd="4"
        dayEnd="19" />
    <sign
        name="@string/zodiac_taurus_name"
        contentDescription="@string/zodiac_taurus_cd"
        icon="@drawable/ic_zodiac_taurus"
        monthStart="4"
        dayStart="20"
        monthEnd="5"
        dayEnd="20" />
    <sign
        name="@string/zodiac_gemini_name"
        contentDescription="@string/zodiac_gemini_cd"
        icon="@drawable/ic_zodiac_gemini"
        monthStart="5"
        dayStart="21"
        monthEnd="6"
        dayEnd="20" />
    <sign
        name="@string/zodiac_cancer_name"
        contentDescription="@string/zodiac_cancer_cd"
        icon="@drawable/ic_zodiac_cancer"
        monthStart="6"
        dayStart="21"
        monthEnd="7"
        dayEnd="22" />
    <sign
        name="@string/zodiac_leo_name"
        contentDescription="@string/zodiac_leo_cd"
        icon="@drawable/ic_zodiac_leo"
        monthStart="7"
        dayStart="23"
        monthEnd="8"
        dayEnd="22" />
    <sign
        name="@string/zodiac_virgo_name"
        contentDescription="@string/zodiac_virgo_cd"
        icon="@drawable/ic_zodiac_virgo"
        monthStart="8"
        dayStart="23"
        monthEnd="9"
        dayEnd="22" />
    <sign
        name="@string/zodiac_libra_name"
        contentDescription="@string/zodiac_libra_cd"
        icon="@drawable/ic_zodiac_libra"
        monthStart="9"
        dayStart="23"
        monthEnd="10"
        dayEnd="22" />
    <sign
        name="@string/zodiac_scorpio_name"
        contentDescription="@string/zodiac_scorpio_cd"
        icon="@drawable/ic_zodiac_scorpio"
        monthStart="10"
        dayStart="23"
        monthEnd="11"
        dayEnd="21" />
    <sign
        name="@string/zodiac_sagittarius_name"
        contentDescription="@string/zodiac_sagittarius_cd"
        icon="@drawable/ic_zodiac_sagittarius"
        monthStart="11"
        dayStart="22"
        monthEnd="12"
        dayEnd="21" />
    <sign
        name="@string/zodiac_capricorn_name"
        contentDescription="@string/zodiac_capricorn_cd"
        icon="@drawable/ic_zodiac_capricorn"
        monthStart="12"
        dayStart="22"
        monthEnd="1"
        dayEnd="19" />
    <sign
        name="@string/zodiac_aquarius_name"
        contentDescription="@string/zodiac_aquarius_cd"
        icon="@drawable/ic_zodiac_aquarius"
        monthStart="1"
        dayStart="20"
        monthEnd="2"
        dayEnd="18" />
    <sign
        name="@string/zodiac_pisces_name"
        contentDescription="@string/zodiac_pisces_cd"
        icon="@drawable/ic_zodiac_pisces"
        monthStart="2"
        dayStart="19"
        monthEnd="3"
        dayEnd="20" />
</zodiacSigns>
